AC_INIT(vimcom, 0.9-5)

AC_CHECK_PROGS(PKG_CONFIG, pkg-config)   
if test -n "${PKG_CONFIG}"; then
	if (${PKG_CONFIG} --exists x11); then
         X11_CPPFLAGS=`${PKG_CONFIG} --cflags x11`
         X11_LIBS=`${PKG_CONFIG} --libs x11`
    else
         echo "ERROR: X11 not found by pkg-config."
         exit 1
    fi
else
    echo "ERROR: Cannot find pkg-config."
    exit 1
fi

## Allow user to set extra preprocessor flags (e.g. -Wall)
X11_CPPFLAGS=${PKG_CPPFLAGS}" "${X11_CPPFLAGS}

AC_SUBST(X11_CPPFLAGS)
AC_SUBST(X11_LIBS)
AC_OUTPUT(src/Makevars)

